# my-autoware-workspace

./: .gitignore
autoware_auto_perception_rviz_plugin/src/object_detection/: detected_objects_display.cpp
common/my_utils/: package.xml
common/my_utils/launch/: my_utils.launch.py  my_utils.launch.xml
my_utils/: CMakeLists.txt  package.xml
my_utils/src/my_utils/: linear2d_utils.cpp  radar_utils.cpp  twist_utils.cpp
my_utils/src/my_utils_node/: my_utils.cpp
object_filter/: package.xml
object_filter/launch/: object_filter.launch.xml
object_velocity_splitter/: CMakeLists.txt  README.md  package.xml
object_velocity_splitter/include/object_velocity_splitter/: object_velocity_splitter_node.hpp
object_velocity_splitter/launch/: object_filter.launch.xml  object_velocity_splitter.launch.xml
object_velocity_splitter/src/object_filter_node/: object_filter_node.cpp
object_velocity_splitter/src/object_velocity_splitter_node/: object_velocity_splitter_node.cpp
perception/front_vehicle_velocity_estimator/: CMakeLists.txt  CMakeLists_autoware.txt  README.md  package.xml  package_autoware.xml
perception/front_vehicle_velocity_estimator/launch/: front_vehicle_velocity_estimator.launch.py  (+1 more)
radar_crossing_objects_noise_filter/: README.md  package.xml
radar_crossing_objects_noise_filter/launch/: radar_crossing_objects_noise_filter.launch.xml
radar_fusion_to_detected_object/: CMakeLists.txt  README.md  package.xml
radar_fusion_to_detected_object/config/: radar_object_fusion_to_detected_object.param.yaml
radar_fusion_to_detected_object/docs/: algorithm.md
radar_fusion_to_detected_object/include/: radar_fusion_to_detected_object.hpp
radar_fusion_to_detected_object/launch/: radar_fusion_to_detected_object.launch.py  radar_object_fusion_to_detected_object.launch.xml
radar_fusion_to_detected_object/src/: radar_fusion_to_detected_object.cpp
radar_object_crossing_noise_filter/: CMakeLists.txt  README.md  package.xml
radar_object_crossing_noise_filter/launch/: radar_object_crossing_noise_filter.xml
radar_object_tracking/: CMakeLists.txt  CMakeLists_autoware.txt  README.md  package.xml  package_autoware.xml
radar_object_tracking/docs/: algorithm.md
radar_object_tracking/include/radar_object_tracking/: radar_object_tracking.hpp  radar_object_tracking_node.hpp
radar_object_tracking/launch/: radar_object_tracking.launch.py  radar_object_tracking.launch.xml
radar_object_tracking/src/radar_object_tracking_node/: radar_object_tracking.cpp  radar_object_tracking_node.cpp
radar_scan_to_pointcloud2/: CMakeLists.txt  README.md  package.xml
radar_scan_to_pointcloud2/launch/: radar_scan_to_pointcloud2.launch.xml
radar_static_pointcloud_filter/: CMakeLists.txt  README.md  package.xml
radar_static_pointcloud_filter/launch/: radar_static_pointcloud_filter.launch.py  radar_static_pointcloud_filter.launch.xml
radar_threshold_filter/: README.md
radar_threshold_filter/config/: radar_threshold_filter.param.yaml
radar_threshold_filter/launch/: radar_threshold_filter.launch.py  radar_threshold_filter.launch.xml
radar_tracks_crossing_noise_filter/: CMakeLists.txt  README.md  package.xml
radar_tracks_crossing_noise_filter/launch/: radar_object_crossing_noise_filter.xml
radar_tracks_msgs_converter/: CMakeLists.txt  README.md  package.xml
radar_tracks_msgs_converter/launch/: radar_tracks_msgs_converter.launch.py  radar_tracks_msgs_converter.launch.xml
radar_tracks_noise_filter/: README.md  package.xml
radar_tracks_noise_filter/launch/: radar_object_crossing_noise_filter.xml  radar_object_noise_filter.xml  radar_tracks_noise_filter.launch.xml
sensing/radar_threshold_filter/: CMakeLists.txt  CMakeLists_autoware.txt  README.md  package.xml  package_autoware.xml
sensing/sensing_utils/: CMakeLists.txt  README.md  package.xml
sensing/sensing_utils/include/sensing_utils/: conversion.hpp  geometry.hpp  radar.hpp  sensing_utils.hpp  temp.hpp
sensing/sensing_utils/src/: conversion.cpp
sensing/sensing_utils/src/sensing_utils_node/: sensing_utils.cpp
(+48 files in other folders)
