<?xml version="1.0"?>
<package format="3">
  <name>radar_object_tracking</name>
  <version>0.1.0</version>
  <description>radar_object_tracking</description>
  <author email="satoshi.tanaka@tier4.jp">Sathshi Tanaka</author>
  <maintainer email="satoshi.tanaka@tier4.jp">Sathshi Tanaka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>autoware_cmake</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
